--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 16px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -5,4 +9,6 @@ body {
 
 #root {
   position: relative;
+  height: 100vh;
+  width: 100vw;
 }
